--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootswatch": "^5.3.5",
     "html-tags": "^5.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
