--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "bootswatch": "^5.3.5",
